--- a/benchmark_SCAMPS/DeepPhys.ipynb
+++ b/benchmark_SCAMPS/DeepPhys.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +72,7 @@
    ],
    "source": [
     "deepphys = DeepPhys_end_to_end()\n",
-    "deepphys.compile(optimizer='Nadam', loss='mse')\n",
+    "deepphys.compile(optimizer=keras.optimizers.SGD(learning_rate=0.001), loss='mse')\n",
     "deepphys.build(input_shape=(None, 36, 36, 3))\n",
     "print(f'Flops per frame:{get_flops(deepphys, input_sig=[tf.TensorSpec([32, 36, 36, 3])])/32:.0f}')\n",
     "deepphys.summary()"
@@ -71,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37909/37909 [==============================] - 294s 8ms/step - loss: 0.1558 - val_loss: 0.1211\n",
+      "37909/37909 [==============================] - 652s 17ms/step - loss: 0.1860 - val_loss: 0.1489\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.12113, saving model to ../weights\\DeepPhys_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.14893, saving model to ../weights\\DeepPhys_SCAMPS.h5\n"
      ]
     }
    ],
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,24 +125,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:20<00:00,  2.82it/s]\n"
+      "100%|██████████| 59/59 [00:22<00:00,  2.68it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 19.467, 'RMSE': 27.571, 'R': 0.2959},\n",
-       " 'Whole video': {'MAE': 17.044, 'RMSE': 24.409, 'R': 0.44311}}"
+       "{'Sliding window': {'MAE': 22.078, 'RMSE': 29.413, 'R': 0.12272},\n",
+       " 'Whole video': {'MAE': 17.626, 'RMSE': 24.109, 'R': 0.34937}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,24 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:14<00:00,  2.96it/s]\n"
+      "100%|██████████| 42/42 [00:16<00:00,  2.53it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 17.725, 'RMSE': 25.484, 'R': 0.33976},\n",
-       " 'Whole video': {'MAE': 20.022, 'RMSE': 27.45, 'R': 0.19921}}"
+       "{'Sliding window': {'MAE': 16.655, 'RMSE': 24.87, 'R': 0.31714},\n",
+       " 'Whole video': {'MAE': 14.177, 'RMSE': 21.187, 'R': 0.39728}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
