--- a/benchmark_SCAMPS/PhysNet.ipynb
+++ b/benchmark_SCAMPS/PhysNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,59 +32,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flops per frame:54630323\n",
-      "Model: \"phys_net_1\"\n",
+      "Flops per frame:54260867\n",
+      "Model: \"phys_net_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "sequential_11 (Sequential)   (None, 128, 32, 32, 16)   1472      \n",
+      "sequential_22 (Sequential)   (None, 128, 32, 32, 16)   1280      \n",
       "_________________________________________________________________\n",
-      "sequential_12 (Sequential)   (None, 128, 16, 16, 32)   14112     \n",
+      "sequential_23 (Sequential)   (None, 128, 16, 16, 32)   13984     \n",
       "_________________________________________________________________\n",
-      "sequential_13 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
+      "sequential_24 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
       "_________________________________________________________________\n",
-      "sequential_14 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
+      "sequential_25 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_15 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
+      "sequential_26 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_16 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
+      "sequential_27 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_17 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
+      "sequential_28 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_18 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
+      "sequential_29 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_19 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
+      "sequential_30 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_20 (Sequential)   (None, 64, 2, 2, 64)      16576     \n",
+      "sequential_31 (Sequential)   (None, 64, 2, 2, 64)      16704     \n",
       "_________________________________________________________________\n",
-      "sequential_21 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
+      "sequential_32 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
       "_________________________________________________________________\n",
-      "conv3d_19 (Conv3D)           multiple                  65        \n",
+      "conv3d_29 (Conv3D)           multiple                  65        \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_2 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_4 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_3 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_5 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "average_pooling3d_1 (Average multiple                  0         \n",
+      "average_pooling3d_2 (Average multiple                  0         \n",
       "_________________________________________________________________\n",
-      "reshape_1 (Reshape)          multiple                  0         \n",
+      "reshape_2 (Reshape)          multiple                  0         \n",
       "=================================================================\n",
-      "Total params: 768,993\n",
-      "Trainable params: 767,329\n",
-      "Non-trainable params: 1,664\n",
+      "Total params: 769,825\n",
+      "Trainable params: 768,577\n",
+      "Non-trainable params: 1,248\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "phys_net = PhysNet(norm='layer_frozen')\n",
+    "phys_net = PhysNet()\n",
     "phys_net.compile(optimizer=keras.optimizers.SGD(learning_rate=0.005), loss=np_loss)\n",
     "phys_net.build(input_shape=(None, 128, 32, 32, 3))\n",
     "print(f'Flops per frame:{get_flops(phys_net, input_sig=[tf.TensorSpec([1, 128, 32, 32, 3])])/128:.0f}')\n",
@@ -93,89 +93,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "374/374 [==============================] - 210s 540ms/step - loss: 0.2218 - val_loss: 0.1153\n",
+      "374/374 [==============================] - 186s 477ms/step - loss: 0.8915 - val_loss: 0.5647\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.11529, saving model to ../weights\\PhysNet-LN_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.56465, saving model to ../weights\\PhysNet_SCAMPS.h5\n"
      ]
     }
    ],
    "source": [
-    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet-LN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
-    "phys_net.load_weights('../weights/PhysNet-LN_SCAMPS.h5')"
+    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "phys_net.load_weights('../weights/PhysNet_SCAMPS.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phys_net.load_weights('../weights/PhysNet-LN_SCAMPS.h5')"
+    "phys_net.load_weights('../weights/PhysNet_SCAMPS.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:20<00:00,  2.84it/s]\n"
+      "100%|██████████| 59/59 [00:24<00:00,  2.37it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 17.014, 'RMSE': 29.36, 'R': 0.43882},\n",
-       " 'Whole video': {'MAE': 16.425, 'RMSE': 28.111, 'R': 0.46678}}"
+       "{'Sliding window': {'MAE': 37.317, 'RMSE': 41.773, 'R': -0.00354},\n",
+       " 'Whole video': {'MAE': 36.252, 'RMSE': 40.709, 'R': 0.13516}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_PURE, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet-LN_SCAMPS_PURE.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysNet-LN_SCAMPS_PURE.h5')"
+    "eval_on_dataset(test_set_PURE, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_SCAMPS_PURE.h5', sample=cv2.INTER_CUBIC)\n",
+    "get_metrics('../results/PhysNet_SCAMPS_PURE.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:14<00:00,  2.99it/s]\n"
+      "100%|██████████| 42/42 [00:16<00:00,  2.49it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.809, 'RMSE': 4.493, 'R': 0.96537},\n",
-       " 'Whole video': {'MAE': 1.971, 'RMSE': 3.518, 'R': 0.98133}}"
+       "{'Sliding window': {'MAE': 15.718, 'RMSE': 21.101, 'R': 0.17538},\n",
+       " 'Whole video': {'MAE': 13.733, 'RMSE': 18.966, 'R': 0.24}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_UBFC_rPPG2, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet-LN_SCAMPS_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysNet-LN_SCAMPS_UBFC.h5')"
+    "eval_on_dataset(test_set_UBFC_rPPG2, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_SCAMPS_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
+    "get_metrics('../results/PhysNet_SCAMPS_UBFC.h5')"
    ]
   }
  ],
