--- a/benchmark_SCAMPS/TS-CAN.ipynb
+++ b/benchmark_SCAMPS/TS-CAN.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
-      "Flops per frame:52158718\n"
+      "Flops per frame:53434160\n"
      ]
     }
    ],
    "source": [
     "ts_can_e2e = TS_CAN_end_to_end(n=1)\n",
-    "ts_can_e2e.compile(optimizer='Nadam', loss='mse')\n",
+    "ts_can_e2e.compile(optimizer=keras.optimizers.SGD(learning_rate=0.001), loss='mse')\n",
     "ts_can_e2e.build(input_shape=(None, 36, 36, 3))\n",
     "print(f'Flops per frame:{get_flops(ts_can_e2e, input_sig=[tf.TensorSpec([32, 36, 36, 3])])/32:.0f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37909/37909 [==============================] - 672s 18ms/step - loss: 0.1777 - val_loss: 0.1545\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.15448, saving model to ../weights\\TS-CAN_SCAMPS.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "ts_can_e2e.fit(train.shuffle(2000), validation_data=valid, epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/TS-CAN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "ts_can_e2e.load_weights('../weights/TS-CAN_SCAMPS.h5')"
    ]
   },
   {
@@ -66,22 +83,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_can_e2e.fit(train.shuffle(2000), validation_data=valid, epochs=10, callbacks=[keras.callbacks.ModelCheckpoint('../weights/TS-CAN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "ts_can_e2e.load_weights('../weights/TS-CAN_SCAMPS.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts_can_e2e.load_weights('../weights/TS-CAN_SCAMPS.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,77 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 179/179 [09:46<00:00,  3.28s/it]\n"
+      "100%|██████████| 59/59 [00:36<00:00,  1.64it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.223, 'RMSE': 3.526, 'R': 0.93915},\n",
-       " 'Whole video': {'MAE': 0.929, 'RMSE': 2.898, 'R': 0.95286}}"
+       "{'Sliding window': {'MAE': 23.824, 'RMSE': 29.806, 'R': -0.00331},\n",
+       " 'Whole video': {'MAE': 22.746, 'RMSE': 28.844, 'R': -0.18294}}"
       ]
      },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_on_dataset(test_set_CCNU, ts_can_e2e, 32, (36, 36), step=1, batch=0, save='../results/TS-CAN_SCAMPS_CCNU.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/TS-CAN_SCAMPS_CCNU.h5')\n",
-    "get_metrics('../results/TS-CAN_SCAMPS_CCNU.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 1.233, 'RMSE': 3.816, 'R': 0.92194},\n",
-       " 'Whole video': {'MAE': 0.704, 'RMSE': 1.626, 'R': 0.9847}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, ts_can_e2e, 32, (36, 36), step=1, batch=0, save='../results/TS-CAN_SCAMPS_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/TS-CAN_SCAMPS_CCNU_rPPG.h5')\n",
-    "get_metrics('../results/TS-CAN_SCAMPS_CCNU_rPPG.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 59/59 [00:40<00:00,  1.47it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 4.15, 'RMSE': 11.892, 'R': 0.87403},\n",
-       " 'Whole video': {'MAE': 2.122, 'RMSE': 6.671, 'R': 0.95973}}"
-      ]
-     },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -193,11 +147,11 @@
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.824, 'RMSE': 4.131, 'R': 0.97172},\n",
-       " 'Whole video': {'MAE': 1.022, 'RMSE': 1.478, 'R': 0.9968}}"
+       "{'Sliding window': {'MAE': 17.736, 'RMSE': 25.783, 'R': 0.24157},\n",
+       " 'Whole video': {'MAE': 16.666, 'RMSE': 24.613, 'R': 0.27253}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
