--- a/dataset_process/dataset_process.ipynb
+++ b/dataset_process/dataset_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +204,45 @@
    "source": [
     "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x8x8_train.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='train')\n",
     "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_32x8x8_valid.h5\", shape=(32, 8, 8), step=1, extend_rate=0, fold='val', sample=cv2.INTER_AREA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_450x8x8_train.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [06:39<00:00,  7.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/scamps_datatape_450x8x8_valid.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2800/2800 [01:21<00:00, 34.33it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_450x8x8_train.h5\", shape=(450, 8, 8), step=3, extend_rate=0, fold='train')\n",
+    "dump_datatape(\"Z:/rppg/scamps_dataset.h5\", \"Z:/rppg/scamps_datatape_450x8x8_valid.h5\", shape=(450, 8, 8), step=3, extend_rate=0, fold='val', sample=cv2.INTER_AREA)"
    ]
   },
   {
