--- a/benchmark_SCAMPS/TS-CAN.ipynb
+++ b/benchmark_SCAMPS/TS-CAN.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -59,21 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37909/37909 [==============================] - 672s 18ms/step - loss: 0.1777 - val_loss: 0.1545\n",
+      "Epoch 1/3\n",
+      "37909/37909 [==============================] - 1107s 29ms/step - loss: 0.1957 - val_loss: 0.1720\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.15448, saving model to ../weights\\TS-CAN_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.17199, saving model to ../weights\\TS-CAN_SCAMPS.h5\n",
+      "Epoch 2/3\n",
+      "37909/37909 [==============================] - 514s 13ms/step - loss: 0.1914 - val_loss: 0.1678\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.17199 to 0.16780, saving model to ../weights\\TS-CAN_SCAMPS.h5\n",
+      "Epoch 3/3\n",
+      "37909/37909 [==============================] - 518s 14ms/step - loss: 0.1896 - val_loss: 0.1663\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.16780 to 0.16628, saving model to ../weights\\TS-CAN_SCAMPS.h5\n"
      ]
     }
    ],
    "source": [
-    "ts_can_e2e.fit(train.shuffle(2000), validation_data=valid, epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/TS-CAN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "ts_can_e2e.fit(train.shuffle(2000), validation_data=valid, epochs=3, callbacks=[keras.callbacks.ModelCheckpoint('../weights/TS-CAN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "ts_can_e2e.load_weights('../weights/TS-CAN_SCAMPS.h5')"
    ]
   },
@@ -88,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,24 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:36<00:00,  1.64it/s]\n"
+      "100%|██████████| 59/59 [00:33<00:00,  1.76it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 23.824, 'RMSE': 29.806, 'R': -0.00331},\n",
-       " 'Whole video': {'MAE': 22.746, 'RMSE': 28.844, 'R': -0.18294}}"
+       "{'Sliding window': {'MAE': 24.033, 'RMSE': 30.87, 'R': 0.05584},\n",
+       " 'Whole video': {'MAE': 23.506, 'RMSE': 28.695, 'R': 0.01891}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,24 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:23<00:00,  1.80it/s]\n"
+      "100%|██████████| 42/42 [00:21<00:00,  1.96it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 17.736, 'RMSE': 25.783, 'R': 0.24157},\n",
-       " 'Whole video': {'MAE': 16.666, 'RMSE': 24.613, 'R': 0.27253}}"
+       "{'Sliding window': {'MAE': 13.921, 'RMSE': 22.125, 'R': 0.3582},\n",
+       " 'Whole video': {'MAE': 10.339, 'RMSE': 19.034, 'R': 0.45589}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
