--- a/benchmark_SCAMPS/DeepPhys.ipynb
+++ b/benchmark_SCAMPS/DeepPhys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -57,11 +57,11 @@
      "output_type": "stream",
      "text": [
       "Flops per frame:53434160\n",
-      "Model: \"deep_phys_end_to_end_4\"\n",
+      "Model: \"deep_phys_end_to_end_5\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "model_4 (Functional)         (None, 1)                 532899    \n",
+      "model_5 (Functional)         (None, 1)                 532899    \n",
       "=================================================================\n",
       "Total params: 532,899\n",
       "Trainable params: 532,899\n",
@@ -80,21 +80,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37909/37909 [==============================] - 652s 17ms/step - loss: 0.1860 - val_loss: 0.1489\n",
+      "Epoch 1/3\n",
+      "37909/37909 [==============================] - 1079s 28ms/step - loss: 0.1839 - val_loss: 0.1468\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.14893, saving model to ../weights\\DeepPhys_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.14677, saving model to ../weights\\DeepPhys_SCAMPS.h5\n",
+      "Epoch 2/3\n",
+      "37909/37909 [==============================] - 504s 13ms/step - loss: 0.1743 - val_loss: 0.1416\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.14677 to 0.14158, saving model to ../weights\\DeepPhys_SCAMPS.h5\n",
+      "Epoch 3/3\n",
+      "37909/37909 [==============================] - 509s 13ms/step - loss: 0.1715 - val_loss: 0.1392\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.14158 to 0.13921, saving model to ../weights\\DeepPhys_SCAMPS.h5\n"
      ]
     }
    ],
    "source": [
-    "deepphys.fit(train.shuffle(2000), validation_data=valid, epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/DeepPhys_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "deepphys.fit(train.shuffle(2000), validation_data=valid, epochs=3, callbacks=[keras.callbacks.ModelCheckpoint('../weights/DeepPhys_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "deepphys.load_weights('../weights/DeepPhys_SCAMPS.h5')"
    ]
   },
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,24 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:22<00:00,  2.68it/s]\n"
+      "100%|██████████| 59/59 [00:21<00:00,  2.71it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 22.078, 'RMSE': 29.413, 'R': 0.12272},\n",
-       " 'Whole video': {'MAE': 17.626, 'RMSE': 24.109, 'R': 0.34937}}"
+       "{'Sliding window': {'MAE': 20.586, 'RMSE': 27.847, 'R': 0.20184},\n",
+       " 'Whole video': {'MAE': 16.97, 'RMSE': 24.572, 'R': 0.3114}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,24 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:16<00:00,  2.53it/s]\n"
+      "100%|██████████| 42/42 [00:14<00:00,  2.91it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 16.655, 'RMSE': 24.87, 'R': 0.31714},\n",
-       " 'Whole video': {'MAE': 14.177, 'RMSE': 21.187, 'R': 0.39728}}"
+       "{'Sliding window': {'MAE': 15.621, 'RMSE': 22.903, 'R': 0.36048},\n",
+       " 'Whole video': {'MAE': 14.918, 'RMSE': 22.829, 'R': 0.3327}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
