--- a/benchmark_SCAMPS/PhysNet-LN.ipynb
+++ b/benchmark_SCAMPS/PhysNet-LN.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -40,41 +49,41 @@
      "output_type": "stream",
      "text": [
       "Flops per frame:54630323\n",
-      "Model: \"phys_net_1\"\n",
+      "Model: \"phys_net_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "sequential_11 (Sequential)   (None, 128, 32, 32, 16)   1472      \n",
+      "sequential_22 (Sequential)   (None, 128, 32, 32, 16)   1472      \n",
       "_________________________________________________________________\n",
-      "sequential_12 (Sequential)   (None, 128, 16, 16, 32)   14112     \n",
+      "sequential_23 (Sequential)   (None, 128, 16, 16, 32)   14112     \n",
       "_________________________________________________________________\n",
-      "sequential_13 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
+      "sequential_24 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
       "_________________________________________________________________\n",
-      "sequential_14 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
+      "sequential_25 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
       "_________________________________________________________________\n",
-      "sequential_15 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
+      "sequential_26 (Sequential)   (None, 64, 8, 8, 64)      110784    \n",
       "_________________________________________________________________\n",
-      "sequential_16 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
+      "sequential_27 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
       "_________________________________________________________________\n",
-      "sequential_17 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
+      "sequential_28 (Sequential)   (None, 32, 4, 4, 64)      110720    \n",
       "_________________________________________________________________\n",
-      "sequential_18 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
+      "sequential_29 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
       "_________________________________________________________________\n",
-      "sequential_19 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
+      "sequential_30 (Sequential)   (None, 32, 2, 2, 64)      110720    \n",
       "_________________________________________________________________\n",
-      "sequential_20 (Sequential)   (None, 64, 2, 2, 64)      16576     \n",
+      "sequential_31 (Sequential)   (None, 64, 2, 2, 64)      16576     \n",
       "_________________________________________________________________\n",
-      "sequential_21 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
+      "sequential_32 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
       "_________________________________________________________________\n",
-      "conv3d_19 (Conv3D)           multiple                  65        \n",
+      "conv3d_29 (Conv3D)           multiple                  65        \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_2 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_4 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_3 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_5 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "average_pooling3d_1 (Average multiple                  0         \n",
+      "average_pooling3d_2 (Average multiple                  0         \n",
       "_________________________________________________________________\n",
-      "reshape_1 (Reshape)          multiple                  0         \n",
+      "reshape_2 (Reshape)          multiple                  0         \n",
       "=================================================================\n",
       "Total params: 768,993\n",
       "Trainable params: 767,329\n",
@@ -93,21 +102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "374/374 [==============================] - 210s 540ms/step - loss: 0.2218 - val_loss: 0.1153\n",
+      "Epoch 1/3\n",
+      "374/374 [==============================] - 272s 710ms/step - loss: 0.6642 - val_loss: 0.4380\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.11529, saving model to ../weights\\PhysNet-LN_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.43804, saving model to ../weights\\PhysNet-LN_SCAMPS.h5\n",
+      "Epoch 2/3\n",
+      "374/374 [==============================] - 288s 751ms/step - loss: 0.3578 - val_loss: 0.2940\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.43804 to 0.29400, saving model to ../weights\\PhysNet-LN_SCAMPS.h5\n",
+      "Epoch 3/3\n",
+      "374/374 [==============================] - 287s 751ms/step - loss: 0.2540 - val_loss: 0.2290\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.29400 to 0.22904, saving model to ../weights\\PhysNet-LN_SCAMPS.h5\n"
      ]
     }
    ],
    "source": [
-    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet-LN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=3, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet-LN_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "phys_net.load_weights('../weights/PhysNet-LN_SCAMPS.h5')"
    ]
   },
@@ -122,24 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:20<00:00,  2.84it/s]\n"
+      "100%|██████████| 59/59 [00:28<00:00,  2.06it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 17.014, 'RMSE': 29.36, 'R': 0.43882},\n",
-       " 'Whole video': {'MAE': 16.425, 'RMSE': 28.111, 'R': 0.46678}}"
+       "{'Sliding window': {'MAE': 10.091, 'RMSE': 22.04, 'R': 0.62583},\n",
+       " 'Whole video': {'MAE': 10.236, 'RMSE': 21.737, 'R': 0.64064}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,24 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:14<00:00,  2.99it/s]\n"
+      "100%|██████████| 42/42 [00:19<00:00,  2.18it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.809, 'RMSE': 4.493, 'R': 0.96537},\n",
-       " 'Whole video': {'MAE': 1.971, 'RMSE': 3.518, 'R': 0.98133}}"
+       "{'Sliding window': {'MAE': 1.715, 'RMSE': 5.024, 'R': 0.95604},\n",
+       " 'Whole video': {'MAE': 1.333, 'RMSE': 2.633, 'R': 0.98832}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
