--- a/benchmark_SCAMPS/PhysNet.ipynb
+++ b/benchmark_SCAMPS/PhysNet.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -40,41 +49,41 @@
      "output_type": "stream",
      "text": [
       "Flops per frame:54260867\n",
-      "Model: \"phys_net_2\"\n",
+      "Model: \"phys_net_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "sequential_22 (Sequential)   (None, 128, 32, 32, 16)   1280      \n",
+      "sequential_33 (Sequential)   (None, 128, 32, 32, 16)   1280      \n",
       "_________________________________________________________________\n",
-      "sequential_23 (Sequential)   (None, 128, 16, 16, 32)   13984     \n",
+      "sequential_34 (Sequential)   (None, 128, 16, 16, 32)   13984     \n",
       "_________________________________________________________________\n",
-      "sequential_24 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
+      "sequential_35 (Sequential)   (None, 128, 16, 16, 64)   55616     \n",
       "_________________________________________________________________\n",
-      "sequential_25 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
+      "sequential_36 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_26 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
+      "sequential_37 (Sequential)   (None, 64, 8, 8, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_27 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
+      "sequential_38 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_28 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
+      "sequential_39 (Sequential)   (None, 32, 4, 4, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_29 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
+      "sequential_40 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_30 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
+      "sequential_41 (Sequential)   (None, 32, 2, 2, 64)      110912    \n",
       "_________________________________________________________________\n",
-      "sequential_31 (Sequential)   (None, 64, 2, 2, 64)      16704     \n",
+      "sequential_42 (Sequential)   (None, 64, 2, 2, 64)      16704     \n",
       "_________________________________________________________________\n",
-      "sequential_32 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
+      "sequential_43 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
       "_________________________________________________________________\n",
-      "conv3d_29 (Conv3D)           multiple                  65        \n",
+      "conv3d_39 (Conv3D)           multiple                  65        \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_4 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_6 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_5 (MaxPooling3 multiple                  0         \n",
+      "max_pooling3d_7 (MaxPooling3 multiple                  0         \n",
       "_________________________________________________________________\n",
-      "average_pooling3d_2 (Average multiple                  0         \n",
+      "average_pooling3d_3 (Average multiple                  0         \n",
       "_________________________________________________________________\n",
-      "reshape_2 (Reshape)          multiple                  0         \n",
+      "reshape_3 (Reshape)          multiple                  0         \n",
       "=================================================================\n",
       "Total params: 769,825\n",
       "Trainable params: 768,577\n",
@@ -93,21 +102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "374/374 [==============================] - 186s 477ms/step - loss: 0.8915 - val_loss: 0.5647\n",
+      "Epoch 1/3\n",
+      "374/374 [==============================] - 133s 336ms/step - loss: 0.9654 - val_loss: 0.9439\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.56465, saving model to ../weights\\PhysNet_SCAMPS.h5\n"
+      "Epoch 00001: val_loss improved from inf to 0.94386, saving model to ../weights\\PhysNet_SCAMPS.h5\n",
+      "Epoch 2/3\n",
+      "374/374 [==============================] - 132s 336ms/step - loss: 0.6449 - val_loss: 0.3890\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.94386 to 0.38898, saving model to ../weights\\PhysNet_SCAMPS.h5\n",
+      "Epoch 3/3\n",
+      "374/374 [==============================] - 132s 337ms/step - loss: 0.3546 - val_loss: 0.2978\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.38898 to 0.29776, saving model to ../weights\\PhysNet_SCAMPS.h5\n"
      ]
     }
    ],
    "source": [
-    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=1, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "phys_net.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=3, callbacks=[keras.callbacks.ModelCheckpoint('../weights/PhysNet_SCAMPS.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "phys_net.load_weights('../weights/PhysNet_SCAMPS.h5')"
    ]
   },
@@ -122,24 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:24<00:00,  2.37it/s]\n"
+      "100%|██████████| 59/59 [00:18<00:00,  3.24it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 37.317, 'RMSE': 41.773, 'R': -0.00354},\n",
-       " 'Whole video': {'MAE': 36.252, 'RMSE': 40.709, 'R': 0.13516}}"
+       "{'Sliding window': {'MAE': 31.787, 'RMSE': 40.093, 'R': 0.18123},\n",
+       " 'Whole video': {'MAE': 28.616, 'RMSE': 37.426, 'R': 0.20362}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,24 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:16<00:00,  2.49it/s]\n"
+      "100%|██████████| 42/42 [00:12<00:00,  3.44it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 15.718, 'RMSE': 21.101, 'R': 0.17538},\n",
-       " 'Whole video': {'MAE': 13.733, 'RMSE': 18.966, 'R': 0.24}}"
+       "{'Sliding window': {'MAE': 5.707, 'RMSE': 11.274, 'R': 0.76438},\n",
+       " 'Whole video': {'MAE': 4.489, 'RMSE': 8.521, 'R': 0.87463}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
