--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -366,7 +366,7 @@
     "\n",
     "After the operation is completed, please return to the project directory (not in the Tutorial directory) and run `visualization.py`. This will display a visualization webpage.  \n",
     "\n",
-    "You can go back to the \"Design model\" section, conduct ablation experiments or try modifying the model structure and develop your own model, you don't need to regenerate the datatape unless you've modified the input size of the model. UBFC is a simple dataset because it basically does not contain complex head movements; you can add more datasets following this tutorial's method and train and test on other datasets.   \n",
+    "You can go back to the \"Design model\" section, conduct ablation experiments or try modifying the model structure and develop your own model, **you don't need to regenerate the datatape unless you've modified the input size of the model.** UBFC is a simple dataset because it basically does not contain complex head movements; you can add more datasets following this tutorial's method and train and test on other datasets.   \n",
     "\n",
     "You can refer to the code I wrote in the benchmark, which includes our model and reproduces PhysNet, DeepPhys, TS-CAN, and PhysFormer. In this framework, developing and testing models is very simple. Once the dataset and datatape are generated, the development process is *adjusting the model -> training & validation -> testing*. Its speed is faster than any previous framework.  "
    ]
