--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "We used the first 49 videos of the PURE dataset for training, the last 10 videos for validation, and the entire UBFC dataset for testing.  \n",
     "\n",
-    "Once the dataset is generated, you should not need to generate it again. You can use it repeatedly to create new training data or for testing."
+    "**Once the dataset is generated, you should not need to generate it again.** You can use it repeatedly to create new training data or for testing."
    ]
   },
   {
