--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "We used the first 49 videos of the PURE dataset for training, the last 10 videos for validation, and the entire UBFC dataset for testing.  \n",
     "\n",
-    "**Once the dataset is generated, you should not need to generate it again.** You can use it repeatedly to create new training data or for testing."
+    "Once the dataset is generated, you should not need to generate it again. You can use it repeatedly to create new training data or for testing."
    ]
   },
   {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,25 +286,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "213/213 [==============================] - 12s 47ms/step - loss: 0.7243 - val_loss: 0.5985\n",
+      "213/213 [==============================] - 3s 3ms/step - loss: 0.7896 - val_loss: 0.6952\n",
       "Epoch 2/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.6190 - val_loss: 0.5574\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.6805 - val_loss: 0.5945\n",
       "Epoch 3/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5890 - val_loss: 0.5364\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.6190 - val_loss: 0.5578\n",
       "Epoch 4/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5724 - val_loss: 0.5272\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5915 - val_loss: 0.5364\n",
       "Epoch 5/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5634 - val_loss: 0.5220\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5763 - val_loss: 0.5287\n",
       "Epoch 6/10\n",
-      "213/213 [==============================] - 10s 45ms/step - loss: 0.5594 - val_loss: 0.5217\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5700 - val_loss: 0.5220\n",
       "Epoch 7/10\n",
-      "213/213 [==============================] - 10s 45ms/step - loss: 0.5568 - val_loss: 0.5191\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5661 - val_loss: 0.5230\n",
       "Epoch 8/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5552 - val_loss: 0.5233\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5632 - val_loss: 0.5177\n",
       "Epoch 9/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5536 - val_loss: 0.5178\n",
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5608 - val_loss: 0.5180\n",
       "Epoch 10/10\n",
-      "213/213 [==============================] - 10s 46ms/step - loss: 0.5524 - val_loss: 0.5170\n"
+      "213/213 [==============================] - 0s 2ms/step - loss: 0.5586 - val_loss: 0.5164\n"
      ]
     }
    ],
@@ -324,36 +324,37 @@
     "The first four parameters are: test_dataset, model, frames, resolution  \n",
     "`step=1` means that the model is applied to the test set every 1 second, and after completion, all outputs will be concatenated into a complete result. Overlapping parts will be averaged.  \n",
     "`save='../results/NoobHeart_PURE_UBFC.h5'` indicates the location to save the result file, please save it in the results folder for visualization.py to read.  \n",
-    "`get_metrics` will read the result file and count the indicators. Generally, on UBFC, the metrics use the entire 1-minute video to calculate heart rate. If it is a longer video, using a sliding window would be more appropriate."
+    "`get_metrics` will read the result file and count the metrics. Generally, on UBFC, the metrics use the entire 1-minute video to calculate heart rate. If it is a longer video, using a sliding window would be more appropriate.  \n",
+    "`get_metrics_HRV` is similar to get_metrics_HR, but it calculates the HRV of the entire video. It uses the heartpy toolkit for peak detection and then calculates SDNN. Note that peak detection may not be reliable as rPPG algorithms typically output signals with significant noise."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:05<00:00,  7.75it/s]\n"
+      "100%|██████████| 42/42 [00:01<00:00, 31.25it/s]\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 1.593, 'RMSE': 3.882, 'R': 0.97512},\n",
-       " 'Whole video': {'MAE': 1.007, 'RMSE': 1.543, 'R': 0.99657}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HR metrics: MAE:1.027, RMSE:1.595, R:0.99639\n",
+      "HRV metrics: MAE:34.991, RMSE:38.424, R:0.67982\n"
+     ]
     }
    ],
    "source": [
-    "eval_on_dataset('ubfc_dataset.h5', model, 32, (8, 8), step=0.5, batch=32, save='../results/NoobHeart_PURE_UBFC.h5')\n",
-    "get_metrics('../results/NoobHeart_PURE_UBFC.h5')"
+    "eval_on_dataset('ubfc_dataset.h5', model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_PURE_UBFC.h5')\n",
+    "r = get_metrics('../results/NoobHeart_PURE_UBFC.h5')['Whole video']\n",
+    "print(f'HR metrics: MAE:{r[\"MAE\"]}, RMSE:{r[\"RMSE\"]}, R:{r[\"R\"]}')\n",
+    "r = get_metrics_HRV('../results/NoobHeart_PURE_UBFC.h5')['SDNN']\n",
+    "print(f'HRV metrics: MAE:{r[\"MAE\"]}, RMSE:{r[\"RMSE\"]}, R:{r[\"R\"]}')"
    ]
   },
   {
@@ -366,7 +367,7 @@
     "\n",
     "After the operation is completed, please return to the project directory (not in the Tutorial directory) and run `visualization.py`. This will display a visualization webpage.  \n",
     "\n",
-    "You can go back to the \"Design model\" section, conduct ablation experiments or try modifying the model structure and develop your own model, **you don't need to regenerate the datatape unless you've modified the input size of the model.** UBFC is a simple dataset because it basically does not contain complex head movements; you can add more datasets following this tutorial's method and train and test on other datasets.   \n",
+    "You can go back to the \"Design model\" section, conduct ablation experiments or try modifying the model structure and develop your own model, you don't need to regenerate the datatape unless you've modified the input size of the model. UBFC is a simple dataset because it basically does not contain complex head movements; you can add more datasets following this tutorial's method and train and test on other datasets.   \n",
     "\n",
     "You can refer to the code I wrote in the benchmark, which includes our model and reproduces PhysNet, DeepPhys, TS-CAN, and PhysFormer. In this framework, developing and testing models is very simple. Once the dataset and datatape are generated, the development process is *adjusting the model -> training & validation -> testing*. Its speed is faster than any previous framework.  "
    ]
