--- a/Tutorial/Noob Heart.ipynb
+++ b/Tutorial/Noob Heart.ipynb
@@ -325,7 +325,7 @@
     "`step=1` means that the model is applied to the test set every 1 second, and after completion, all outputs will be concatenated into a complete result. Overlapping parts will be averaged.  \n",
     "`save='../results/NoobHeart_PURE_UBFC.h5'` indicates the location to save the result file, please save it in the results folder for visualization.py to read.  \n",
     "`get_metrics` will read the result file and count the metrics. Generally, on UBFC, the metrics use the entire 1-minute video to calculate heart rate. If it is a longer video, using a sliding window would be more appropriate.  \n",
-    "`get_metrics_HRV` is similar to get_metrics_HR, but it calculates the HRV of the entire video. It uses the heartpy toolkit for peak detection and then calculates SDNN. Note that peak detection may not be reliable as rPPG algorithms typically output signals with significant noise."
+    "`get_metrics_HRV` is similar to `get_metrics`, but it calculates the HRV of the entire video. It uses the heartpy toolkit for peak detection and then calculates SDNN. Note that peak detection may not be reliable as rPPG algorithms typically output signals with significant noise."
    ]
   },
   {
