--- a/dataset_process/dataset_process.ipynb
+++ b/dataset_process/dataset_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +369,46 @@
     "#针对PhysNet生成对应的训练数据\n",
     "#dump_datatape(\"Z:/rppg/ccnu_dataset_train.h5\", \"Z:/rppg/ccnu_datatape_128x32x32_train.h5\", shape=(128, 32, 32), step=2, extend_rate=1, extend_hr=(30, 150))\n",
     "#dump_datatape(\"Z:/rppg/ccnu_dataset_valid.h5\", \"Z:/rppg/ccnu_datatape_128x32x32_valid.h5\", shape=(128, 32, 32), step=2, extend_rate=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/ccnu_datatape_300x5x5_train.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [21:01<00:00,  2.69s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating datatape Z:/rppg/ccnu_datatape_300x5x5_valid.h5 .....\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 77/77 [03:07<00:00,  2.43s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For RhythmNet\n",
+    "dump_datatape(\"Z:/rppg/ccnu_dataset_train.h5\", \"Z:/rppg/ccnu_datatape_300x5x5_train.h5\", shape=(300, 5, 5), step=3, extend_rate=1, extend_hr=(30, 150), sample=cv2.INTER_AREA)\n",
+    "dump_datatape(\"Z:/rppg/ccnu_dataset_valid.h5\", \"Z:/rppg/ccnu_datatape_300x5x5_valid.h5\", shape=(300, 5, 5), step=3, extend_rate=0, sample=cv2.INTER_AREA)"
    ]
   },
   {
