--- a/benchmark_RLAP/RhythmNet.ipynb
+++ b/benchmark_RLAP/RhythmNet.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rhythmnet.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=50, callbacks=[keras.callbacks.ModelCheckpoint('../weights/RhythmNet_CCNU.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
+    "rhythmnet.fit(train.shuffle(2000).batch(32), validation_data=valid.batch(32), epochs=50, callbacks=[keras.callbacks.ModelCheckpoint('../weights/RhythmNet_CCNU.h5', monitor='val_loss', verbose=1, save_best_only=True, mode='min', save_weights_only=True)])\n",
     "rhythmnet.load_weights('../weights/RhythmNet_CCNU.h5')"
    ]
   },
